feature(1): routing to cart page

--- a/my-angular-app/src/app/pages/home-page-component/home-page-component.component.html
+++ b/my-angular-app/src/app/pages/home-page-component/home-page-component.component.html
@@ -5,7 +5,7 @@
         <div class="user-actions">
             <span>Hello, {{ username }}</span>
             <button (click)="logout()">Logout</button>
-            <span class="cart">🛒 ({{ cart.length }})</span>
+            <span class="cart" (click)="goToProductList()">🛒 ({{ cart.length }})</span>
         </div>
     </header>
 
