--- a/my-angular-app/src/app/pages/add-to-cart/add-to-cart.component.html
+++ b/my-angular-app/src/app/pages/add-to-cart/add-to-cart.component.html
@@ -1,1 +1,48 @@
-<p>add-to-cart works!</p>
+<div id="cart-container">
+    <div class="header">
+       <div class="header-elements">
+         <h1>Cart</h1>
+          <div class="user">
+             <img src="" alt="user image">
+             <select class="dropdown" name="cars" id="cars">
+               <option value="login">Login</option>
+               <option value="logout">Logout</option>
+             </select>
+         </div>
+       </div>
+    </div>
+    <div class="cart-table">
+        <h3>Your Cart</h3>
+        <table>
+          <thead>
+            <tr>
+              <th>Item</th>
+              <th>Qty</th>
+              <th>Price</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Mobile</td>
+              <td>1</td>
+              <td>$100</td>
+              <td>$100</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+    <div class="cart-total">
+       <tbody>
+        <tr>
+            <td>Total Quantity:</td>
+            <td>Total Amount: </td>
+        </tr>
+       </tbody>
+    </div>
+    <div class="payment">
+        <button>Back</button>
+        <button>Pay</button>
+    </div>
+
+</div>
