--- a/my-angular-app/src/app/pages/add-to-cart/add-to-cart.component.html
+++ b/my-angular-app/src/app/pages/add-to-cart/add-to-cart.component.html
@@ -5,8 +5,8 @@
           <div class="user">
              <img src="" alt="user image">
              <select class="dropdown" name="cars" id="cars">
-               <option value="login">Login</option>
-               <option value="logout">Logout</option>
+               <option  value="login">Login</option>
+               <option  value="logout">Logout</option>
              </select>
          </div>
        </div>
@@ -41,7 +41,7 @@
        </tbody>
     </div>
     <div class="payment">
-        <button>Back</button>
+        <button (click)="goToHome()">Back</button>
         <button>Pay</button>
     </div>
 
